# Todo-List-FastAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.sh  common-config.yml  dev-up.sh  dev.sh  docker-compose.yml  pyproject.toml
compose/: apptodolist.yml
dev-env/: dev.sh  docker-compose.yml
dev-env/services/: mysql8.yml
docs/todolist/integrations/: APIs.md
src/apptodolist/: app.py  error_handlers.py  middleware.py  web.py
src/apptodolist/views/: health.py  routers.py  system.py
src/apptodolist/views/v1/: category.py  dependencies.py  priority.py  routers.py  status.py  task.py
src/apptodolist/views/v2/: category.py  routers.py  task.py
src/domaintodolist/: exceptions.py
src/domaintodolist/messages/: common.py
src/libtodolist/: __init__.py  context.py  db_session.py  exceptions.py
src/libtodolist/data/: __init__.py
src/libtodolist/data/entities/: __init__.py  category.py  priority.py  status.py  task.py  user.py
src/libtodolist/data/models/: tables.py
src/libtodolist/domain/: __init__.py  category.py  priority.py  status.py  task.py
src/libtodolist/domain/enums/: priority.py  status.py
src/libtodolist/messages/: __init__.py  category.py  common.py  priority.py  status.py  task.py
src/libutil/: database_session.py  db_session.py  engines.py  sqlutil.py  util.py
src/repositorytodolist/: __init__.py
src/repositorytodolist/models/: tables.py
src/utils/: engines.py  util.py
tests/: conftest.py
tests/mocks/: util.py
tests/todolist/: conftest.py  test_1status.py  test_2priorities.py  test_category.py  test_system.py  test_task.py
