# Project Metadata
[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""

# Python Version Compatibility
requires-python = ">=3.13"

# Project Dependencies
dependencies = [
    # Web Servers and ASGI
    "uvicorn==0.20.0",
    "gunicorn<21.0.0,>=20.0.4",
    "fastapi<1.0.0,>=0.114.2",
]

# UV Python Preferences
[tool.uv]
python-preference = "only-system"

# Build System Configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch Build Configuration
[tool.hatch.build]
# Specify source package directory
packages = ["src"]

# Hatch Metadata Configuration
[tool.hatch.metadata]
# Allow direct references to internal packages
allow-direct-references = true